--- a/web/module/hermanos.html
+++ b/web/module/hermanos.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="es">
+
 <head>
     <title>Hermanos</title>
     <meta charset="utf-8" />
@@ -7,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="../css/Styles.css" />
 </head>
 
@@ -17,10 +18,10 @@
     <!-- header-->
     <div class="page-header">
         <div class="main-container">
-          <h1><i class="bi bi-person-lines-fill"></i> Hermanos</h1>
-          <p>Gestión de hermanos de los niños</p>
+            <h1><i class="bi bi-person-lines-fill"></i> Hermanos</h1>
+            <p>Gestión de hermanos de los niños</p>
         </div>
-      </div>
+    </div>
 
     <div class="container mt-4">
 
@@ -50,16 +51,17 @@
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Tipo de relación</label>
-                                <input type="text" class="form-control" id="tipo" placeholder="Hermano biológico, de crianza, etc." />
+                                <input type="text" class="form-control" id="tipo"
+                                    placeholder="Hermano biológico, de crianza, etc." />
                             </div>
                             <div class="d-flex gap-2 justify-content-end">
-                            <button type="reset" class="btn btn-secondary">
-                                <i class="bi bi-arrow-clockwise"></i> Limpiar
-                            </button>
-                            <button type="submit" class="btn btn-primary">
-                                <i class="bi bi-check-circle"></i> Guardar
-                            </button>
-                        </div>
+                                <button type="reset" class="btn btn-secondary">
+                                    <i class="bi bi-arrow-clockwise"></i> Limpiar
+                                </button>
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="bi bi-check-circle"></i> Guardar
+                                </button>
+                            </div>
                         </form>
                     </div>
 
@@ -84,9 +86,12 @@
         </div>
     </div>
 
+    <div id="seccionFooter"></div>
+
     <!-- Scripts -->
     <script src="../js/hermanos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
+
 </html>
