--- a/web/module/ninos.html
+++ b/web/module/ninos.html
@@ -1,20 +1,32 @@
 <!doctype html>
 <html lang="es">
+
 <head>
     <title>Niños</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="../css/Styles.css" />
 </head>
 
 <body>
     <div id="seccionMenu"></div>
-    <div class="container mt-4">
-        <h1>Niños</h1>
+    <!-- header-->
+    <div class="page-header">
+        <div class="main-container">
+            <h1><i class="bi bi-person-circle"></i> Niños</h1>
+            <p>Gestión de los niños</p>
+        </div>
+    </div>
 
+
+    <div class="container mt-4">
+        
         <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalNino">
-            Crear niño
+           <i class="bi bi-plus-circle"></i> Crear niño
         </button>
 
         <!-- Modal -->
@@ -77,7 +89,7 @@
                                 <button type="reset" class="btn btn-secondary">Limpiar</button>
                             </div>
                         </form>
-                    </div>                    
+                    </div>
                 </div>
             </div>
         </div>
@@ -101,8 +113,11 @@
         </div>
     </div>
 
+    <div id="seccionFooter"></div>
+    
     <script src="../js/ninos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
+
 </html>
