--- a/web/module/ong.html
+++ b/web/module/ong.html
@@ -1,22 +1,31 @@
 <!doctype html>
 <html lang="es">
+
 <head>
     <title>ONG</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="../css/Styles.css" />
+
 </head>
 
 <body>
     <div id="seccionMenu"></div>
-
+    <!-- header-->
+    <div class="page-header">
+        <div class="main-container">
+            <h1><i class="bi bi-house-heart-fill"></i> ONG & Casas Hogar</h1>
+            <p>Gestión de casas de hogar</p>
+        </div>
+    </div>
     <div class="container mt-4">
         <h1>ONG / Casas Hogar</h1>
 
         <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalOng">
-            Crear ONG
+            <i class="bi bi-plus-circle"></i>Crear ONG
         </button>
 
         <!-- Modal -->
@@ -56,7 +65,7 @@
                                 <button type="reset" class="btn btn-secondary">Limpiar</button>
                             </div>
                         </form>
-                    </div>   
+                    </div>
 
                 </div>
             </div>
@@ -73,17 +82,18 @@
                         <th>Teléfono</th>
                         <th>Correo</th>
                         <th>Capacidad</th>
-                        <th>Acciones</th> 
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody id="tablaDatos"></tbody>
             </table>
         </div>
     </div>
-
+    <div id="seccionFooter"></div>
     <!-- Scripts -->
     <script src="../js/ong.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
+
 </html>
