--- a/web/module/reportes.html
+++ b/web/module/reportes.html
@@ -1,25 +1,32 @@
 <!doctype html>
 <html lang="es">
+
 <head>
     <title>Reportes</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- jQuery -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="../css/Styles.css" />
+
 </head>
 
 <body>
     <div id="seccionMenu"></div>
-
+    <!-- header-->
+    <div class="page-header">
+        <div class="main-container">
+            <h1><i class="bi bi-card-text"></i> Reportes</h1>
+            <p>Gestión de reportes de los niños</p>
+        </div>
+    </div>
     <div class="container mt-4">
-        <h1>Reportes de seguimiento</h1>
+
 
         <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalReporte">
-            Registrar reporte
+            <i class="bi bi-plus-circle"></i> Registrar reporte
         </button>
 
         <!-- Modal -->
@@ -78,10 +85,11 @@
             </table>
         </div>
     </div>
-
+    <div id="seccionFooter"></div>
     <!-- Scripts -->
     <script src="../js/reportes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
+
 </html>
