--- a/web/module/responsables.html
+++ b/web/module/responsables.html
@@ -1,22 +1,32 @@
 <!doctype html>
 <html lang="es">
+
 <head>
     <title>Responsables</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="../css/Styles.css" />
 </head>
 
 <body>
     <div id="seccionMenu"></div>
-
+    <!-- header-->
+    <div class="page-header">
+        <div class="main-container">
+            <h1><i class="bi bi-person-rolodex"></i>Responsables</h1>
+            <p>Gestión de las personas responsables de los niños</p>
+        </div>
+    </div>
     <div class="container mt-4">
-        <h1>Responsables</h1>
+
 
         <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalResp">
-            Crear responsable
+            <i class="bi bi-plus-circle"></i>Crear responsable
         </button>
 
         <!-- Modal -->
@@ -76,10 +86,12 @@
         </div>
     </div>
 
+    <div id="seccionFooter"></div>
+
     <!-- Scripts -->
     <script src="../js/responsables.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
-</html>
 
+</html>
