--- a/web/module/ubicaciones.html
+++ b/web/module/ubicaciones.html
@@ -1,22 +1,34 @@
 <!doctype html>
 <html lang="es">
+
 <head>
     <title>Ubicaciones</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-      <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="../css/Styles.css" />
 </head>
+
 <body>
     <div id="seccionMenu"></div>
+    <!-- header-->
+    <div class="page-header">
+        <div class="main-container">
+            <h1><i class="bi bi-pin-map"></i>Ubicaciones</h1>
+            <p>Gestión de ubicaciones de los niños</p>
+        </div>
+    </div>
     <div class="container mt-4">
-        <h1>Ubicaciones de niños</h1>
+
 
         <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalUbicacion">
-            Registrar ubicación
+            <i class="bi bi-plus-circle"></i> Registrar ubicación
         </button>
 
-        <div class="modal fade" id="modalUbicacion" tabindex="-1" aria-labelledby="modalUbicacionLabel" aria-hidden="true">
+        <div class="modal fade" id="modalUbicacion" tabindex="-1" aria-labelledby="modalUbicacionLabel"
+            aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -54,7 +66,7 @@
                                 <button type="reset" class="btn btn-secondary">Limpiar</button>
                             </div>
                         </form>
-                    </div>                    
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,10 +88,13 @@
             </table>
         </div>
     </div>
+    <div id="seccionFooter"></div>
 
+    
     <script src="../js/ubicaciones.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
+
 </html>
